# PIC-RetooledLegacyCodebase

./: .gitignore  .pre-commit-config.yaml  BPneuralnetwork.py  CraftandprocessData.py  IGNOREME.py  LICENSE  MAIN.py  README.md  Train4threeinput.py  Train4twoinput.py  build.sh  finalversion.py  machinetoolstatic.py  matplottest.py  productpicture.py  pyproject.toml  qt_mysql.py  requirements.txt
.github/workflows/: build.yaml
app/: BPneuralnetwork.py  CraftandprocessData.py  IGNOREME.py  MAIN_original.py  NNW4Visual.py  NeuralNetworkUi.py  NeuralProblem.py  Picture4plot.py  Restore4threeinput.py  Restore4twoinput.py  Train4threeinput.py  Train4twoinput.py  __main__.py  finalrestore.py  finalversion.py  frmlogin.py  getforceData.py  machinetoolrealstate.py  machinetoolstatic.py  machinetoolupdate.py  main.py  mainform.py  matplottest.py  productpicture.py  py_mysql.py  qt_mysql.py  userinfo.py
