[tool.poetry]
name = "intelligent-system-for-productionline-"
version = "0.1.0"
description = ""
authors = ["FengJi2021 <feng.ji@campus.tu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "~3.9"
python = ">=3.9.0,<3.11.0"
pyqt5 = "5.15.10"
pyinstaller = "6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
