[tool.poetry]
name = "PIC-RetooledLegacyCodebase"
version = "0.1.0"
description = ""
authors = ["FengJi2021"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "~3.9"
python = ">=3.9.0,<3.11.0"
pyqt5 = "5.15.10"
pyinstaller = "6.1.0"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
# preview = true

[tool.flake8]
# need Flake8-pyproject
ignore = ['F403', 'F405', 'W503', 'W504', 'E722']
